k8s/keybuzz-client-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keybuzz-client-dev
  labels:
    app: keybuzz-client
    environment: dev
