k8s/keybuzz-client-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keybuzz-client
  namespace: keybuzz-client-dev
  labels:
    app: keybuzz-client
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: keybuzz-client
